src/components/Card/Card.css
@import url("https://fonts.googleapis.com/css2?family=PT+Mono&display=swap");

body {
    font-family: "PT Mono", monospace;
}

.card {
    display: flex;
    align-items: center;
    background-color: white;
    border-radius: 12px;
    padding: 16px;
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
    position: relative;
    width: 500px;
    height: 250px;
    transition: transform 0.3s ease-out;
}

.profile-image {
    flex-shrink: 0;
    margin-right: 16px;
    width: 120px;
    height: 120px;
    border-radius: 12px;
    overflow: hidden;
    border: 2px solid #b0b0b0;
}

.profile-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.card-content {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: relative;
}

.card-content h2 {
    margin: 0;
    font-size: 22px;
    font-weight: bold;
    color: #333333;
    word-wrap: break-word;
}

.card-content .title {
    margin: 2px 0;
    font-size: 14px;
    color: #777777;
}

.card-content .location,
.card-content .university {
    margin: 2px 0;
    font-size: 12px;
    color: #777777;
}

.card-content .description {
    margin: 8px 0;
    font-size: 14px;
    color: #999999;
}

.sun-life-link {
    text-decoration: none;
    color: #555555;
}

.sun-life-link:hover {
    text-decoration: underline;
    color: #555555;
    transition: text-decoration 0.3s ease;
}

.social-links {
    display: flex;
    gap: 20px;
    margin-top: 12px;
    align-self: flex-start;
}

.social-icon {
    font-size: 18px;
    color: #777777;
}

.social-icon:hover {
    color: #555555;
}

.resume-button {
    position: absolute;
    bottom: 16px;
    right: 16px;
}

.resume-button a {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    padding: 8px 16px;
    border-radius: 8px;
    font-size: 14px;
    color: #333333;
    background-color: #f0f0f0;
    text-decoration: none;
    transition:
        background-color 0.3s ease,
        transform 0.2s ease;
}

.resume-button a:hover {
    background-color: #e0e0e0;
    transform: scale(1.05);
}

.blog-button {
    position: absolute;
    bottom: 16px;
    left: 16px;
}

.blog-button a {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    padding: 8px 16px;
    border-radius: 8px;
    font-size: 14px;
    color: #333333;
    background-color: #f0f0f0;
    text-decoration: none;
    transition:
        background-color 0.3s ease,
        transform 0.2s ease;
}

.blog-button a:hover {
    background-color: #e0e0e0;
    transform: scale(1.05);
}

/* Mobile styles */
@media (max-width: 768px) {
    .card {
        width: 100%;
        height: auto;
        padding: 12px;
        flex-direction: column;
        align-items: center;
    }

    .profile-image {
        width: 80px;
        height: 80px;
        margin-right: 0;
        margin-bottom: 16px;
    }

    .card-content h2 {
        font-size: 20px;
    }

    .card-content .title,
    .card-content .location,
    .card-content .university {
        font-size: 14px;
    }

    .card-content .description {
        font-size: 12px;
    }

    .social-links {
        gap: 15px;
        margin-top: 10px;
    }

    .resume-button a {
        font-size: 12px;
        padding: 6px 12px;
    }
}

